<resources>
    <string name="app_name">CalculoNotas</string>
    <string name="emp">Empezar</string>
    <string name="in">Para continuar da clic en el boton empezar</string>
    <string name="msg">En esta aplicacion podras calcular el promedio de tus notas, para que tengas conocimiento de como vas en tus materias</string>
    <string name="bien">Bienvenidos</string>
    <string name="cald">Calculo de Notas</string>
    <string name="mat">Materias</string>
    <string name="nd">Nota1:</string>
    <string name="n2d">Nota2:</string>
    <string name="n3d">Nota3:</string>
    <string name="defd">Definitiva</string>
    <string name="btnCalculard">Calcular</string>
    <string name="btnInformaciond">Información</string>
    <string name="mat1">Desarrollo Móvil</string>
    <string name="n1s">Nota1:</string>
    <string name="n2s">Nota2:</string>
    <string name="n3s">Nota3:</string>
    <string name="n1p">Nota1:</string>
    <string name="n2p">Nota2:</string>
    <string name="n3p">Nota3:</string>
    <string name="n3w">Nota3:</string>
    <string name="n1w">Nota1:</string>
    <string name="n2w">Nota2:</string>
    <string name="defs">Definitiva</string>
    <string name="defp">Definitiva</string>
    <string name="defw">Definitiva</string>
    <string name="mat2">Ingeniería de Software</string>
    <string name="mat4">Tecnología y Sistemas Web</string>
    <string name="mat3">Patrones de Diseño</string>
    <string name="btnpt">Promedio Total</string>
    <string name="tit">Para Tener en Cuenta</string>
    <string name="texto1">Una Materia se aprueba con una nota definitiva mayor o igual a 3.0 y se puede habilitar en los siguientes casos:</string>
    <string name="texto2">- Si la nota definitiva es mayor o igual a 2.0 y menor que 3.0</string>
    <string name="texto3">- Si la nota final (Nota 3) es menor de 2.0 y el computo individual de la definitiva es mayor o igual a 2.0</string>
    <string name="texto4">Recuerde que si su nota final (Nota 3) es menor de 2.0 , esta será su Definitiva.</string>
    <string name="texto_autor">Autora: Ana Gabriela Muñoz Cabrera</string>
    <string name="boton_volver">Volver</string>
    <string name="btnacerca">Acerca De</string>
    <string name="texto_campos">Los campos estan vacios</string>
    <string name="texto_invalido">Las notas no deben pasar de 5.0</string>
    <string name="sscreen">Aplicacion para Calcular Notas Estudiantiles</string>
    <string name="ponderado">Su Promedio Total es:</string>
</resources>
