<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/notas"
    tools:context="com.example.asus.calculonotas3.CalcularNota">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/scrollView3"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="126dp"
                app:srcCompat="@drawable/unimar" />

            <TextView
                android:id="@+id/titulo"
                android:layout_width="417dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/scrollView3"
                android:layout_centerHorizontal="true"
                android:fontFamily="casual"
                android:text="@string/cald"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/background_dark"
                android:textSize="30sp"
                android:textStyle="bold|italic" />


            <TextView
                android:id="@+id/materia1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/mat1"
                android:textAlignment="textStart"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/no1d"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/nd"
                android:textAlignment="textStart"
                android:textColor="?attr/actionMenuTextColor"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/nota1d"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="0"
                android:inputType="numberDecimal"
                android:maxLength="3"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/no2d"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/n2d"
                android:textAlignment="textStart"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/nota2d"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="0"
                android:inputType="numberDecimal"
                android:maxLength="3"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/no3d"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/n3d"
                android:textAlignment="textStart"
                android:textColor="?attr/actionMenuTextColor"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/nota3d"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="0"
                android:inputType="numberDecimal"
                android:maxLength="3"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/definitivad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/defd"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Rd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:maxLength="3"
                android:textColor="@android:color/background_dark"
                android:textSize="30sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/materia2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/mat2"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/no1s"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/n1s"
                android:textAlignment="textStart"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/nota1s"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="0"
                android:maxLength="3"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/no2s"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/n2s"
                android:textAlignment="textStart"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/nota2s"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="0"
                android:maxLength="3"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/no3s"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/n3s"
                android:textAlignment="textStart"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/nota3s"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="0"
                android:maxLength="3"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/definitivas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/defs"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Rs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:maxLength="3"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/materia3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/mat3"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/no1p"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/n1p"
                android:textAlignment="textStart"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/nota1p"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="0"
                android:maxLength="3"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/no2p"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/n2p"
                android:textAlignment="textStart"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/nota2p"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="0"
                android:maxLength="3"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/no3p"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/n3p"
                android:textAlignment="textStart"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/nota3p"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="0"
                android:maxLength="3"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/definitivap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/defp"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Rp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:maxLength="3"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/materia4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/mat4"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/no1w"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/n1w"
                android:textAlignment="textStart"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/nota1w"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="0"
                android:maxLength="3"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/no2w"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/n2w"
                android:textAlignment="textStart"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/nota2w"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="0"
                android:maxLength="3"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/no3w"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/n3w"
                android:textAlignment="textStart"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/nota3w"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="0"
                android:maxLength="3"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/definitivaw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/defw"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Rw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:maxLength="3"
                android:textColor="@android:color/background_dark"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnPromedioTotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/background_dark"
                android:fontFamily="casual"
                android:onClick="calcularPromedio"
                android:text="@string/btnpt"
                android:textColor="@android:color/background_light"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvpromedio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:textAlignment="center"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btninformacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/background_dark"
                android:fontFamily="casual"
                android:onClick="informacion"
                android:text="@string/btnInformaciond"
                android:textColor="@android:color/background_light"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnAcerdaDe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/background_dark"
                android:fontFamily="casual"
                android:onClick="acercade"
                android:text="@string/btnacerca"
                android:textColor="@android:color/background_light"
                android:textSize="24sp"
                android:textStyle="bold" />


        </LinearLayout>
    </ScrollView>

</RelativeLayout>
