<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/infor"
    tools:context="com.example.asus.calculonotas3.Informacion">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100000dp"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/titulos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/materia4"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/materia4"
                android:layout_marginTop="14dp"
                android:fontFamily="casual"
                android:text="@string/tit"
                android:textAlignment="center"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/titulos"
                android:layout_marginTop="50dp"
                android:fontFamily="casual"
                android:text="@string/texto1"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tx2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/txt1"
                android:layout_marginTop="29dp"
                android:fontFamily="casual"
                android:text="@string/texto2"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tx2"
                android:layout_marginTop="27dp"
                android:fontFamily="casual"
                android:text="@string/texto3"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/txt3"
                android:layout_marginTop="26dp"
                android:text="@string/texto4"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark" />

        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>
